--- a/style.css
+++ b/style.css
@@ -2,13 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: black;
+    color: rgba(0, 0, 0, 0.862);
+
       /* ,sans-serif; */
 }
-
+body{
+    font-family: "feilla";
+}
 .page1{
     width: 100%;
-    height: 85vh;
+    height:89vh;
     background-color: #fffd63;
     color: black;
     border-radius: 3%;
@@ -34,7 +37,7 @@
 }
 .navi .left img{
     padding: 10px;
-   height: 10vh;
+   height: 16vh;
 }
 
 
@@ -45,16 +48,11 @@
      /* display: none; */
 }
 
-
-.page1 .center{
-    height: 88vh;
-    width: 100%;
-    position: absolute;
-    top:12vh;
-    /* z-index: -1; */
+.ri-menu-fold-4-line{
+    font-size: 30px;
+    padding-right: 50px ;
+    cursor: pointer;
 }
-
-
 
 
 .menu {
@@ -74,8 +72,10 @@
 }
 
 .menu li a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
+    font-size: 30px;
+    font-weight: 600;
 }
 
 .menu li a:hover {
@@ -91,15 +91,22 @@
         right: 0;
         width: 100%;
         height: 50vh;
-        background-color: #333;
+        background-color: #adabab6b;
+        backdrop-filter: blur(5px);
     }
 
 .menu.show {
         display: flex;
     }
 
+#cross-icon {
+        display: none;
+    }
 
-
+#cross-icon.show-cross {
+        display: block;
+        
+    }
 
 
 
@@ -110,37 +117,121 @@
     margin: auto 20px;
     margin-top: 30px;
     border-radius: 9%;
-
-
     
 }
 
 
 .page1 h1{
     margin-top: 30px;
-    padding: 0 20px;
+    /* padding: 0 20px;  */
     text-align: center;
     line-height: 45px;
-    font-weight: 900;
+    font-size: 22px;
 }
 .page1 p{
     margin-top: 30px;
     padding: 2px 20px;
     text-align: center;
     line-height: 25px;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 14px;
 
+}
+
+@media (min-width:390px) {
+    .page1 h1{
+        font-size: 28px;
+    }
+    .page1 p{
+        font-size: 16px;
+        line-height: 38px;
+    
+    }
+}
+
+
+
+.page1 button{
+    margin: 20px auto ;
+    font-size: 15px;
+    /* width: 120px; */
+    /* height: 40px; */
+    padding: 20px 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+    background-color: #3feec0;
+    border: none;
+    border-radius: 32px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+.ri-arrow-down-circle-fill{
+    color: rgb(255, 255, 255);
+    /* background-color: black; */
+    font-size: 30px;
+    text-align: center;
+}
+
+.page1 a{
+  text-decoration: none;
+  
 }
 
 
 .page2{
+    padding-top: 50px;
     height: 90vh;
     margin-top: 15vh;
     border-radius: 4%;
+    display: flex;
+    flex-direction: column;
+    gap: 65px;
+
 }
 .page3{
     height: 100vh;
     background-color:#3feec0;
     border-radius: 4%;
+} 
+
+
+
+.container{
+    height: 200px;
+    width: 85%;
+    border-radius: 33px;
+    background-color: #575757;
+    margin: 0 auto;
+    background-size: cover;
+    box-shadow: 20px 15px 40px rgba(0, 0, 0, 0.759);
 }
+
+#cont1{
+    background-image: url("https://images.unsplash.com/photo-1524368535928-5b5e00ddc76b?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    
+}
+
+#cont2{
+    background-image: url("https://images.unsplash.com/photo-1669021820358-317111184ede?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+#cont3{
+    background-image: url("https://images.unsplash.com/photo-1523301343968-6a6ebf63c672?q=80&w=1769&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+
+
+
+#cont4{
+    background-image: url("https://images.unsplash.com/photo-1712632629958-7a3c6a6069c4?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+
+.container h2{
+     text-transform: uppercase;
+     text-align: center;
+     margin-top: 207px;
+
+}
+/* #cont4 h2{
+     padding-top: 200px;
+}
+ */
